# SOVDd

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build-and-test.sh  install-deps.sh  run-e2e-tests.sh
.github/workflows/: ci.yml
.skills/ecu-config/: SKILL.md
.skills/ecu-config/scripts/: generate-config.py
.skills/software-flash/: SKILL.md
.skills/software-flash/references/: flash-sequences.md
.skills/sovd-diagnostics/: SKILL.md
.skills/sovd-diagnostics/references/: uds-services.md
.skills/test-automation/: SKILL.md
.skills/test-automation/scripts/: run-test.sh
config/: example-ecu-standard.toml  example-ecu-vortex.toml  gateway-dual-ecu.toml  gateway-socketcan.toml  gateway-vortex.toml  sovd-socketcan.toml  sovd.toml
config/did-definitions/: engine_ecu.did.yaml
config/parameters/: vtx_ecm.toml
crates/example-app/: Cargo.toml  Dockerfile
crates/example-app/src/: auth.rs  backend.rs  config.rs  lib.rs  main.rs  managed_ecu.rs
crates/example-app/tests/: e2e_test.rs
crates/example-ecu/: Cargo.toml  README.md
crates/example-ecu/src/: config.rs  lib.rs  main.rs  parameters.rs  sw_package.rs  uds.rs
crates/sovd-api/: Cargo.toml
crates/sovd-api/src/: auth.rs  error.rs  lib.rs  state.rs  workshop_ca.rs
crates/sovd-api/src/handlers/: apps.rs  bulk_data.rs  campaigns.rs  clear_data.rs  components.rs  data.rs  data_definitions.rs  data_lists.rs  definitions.rs  discovery.rs  faults.rs  files.rs  flash.rs  logs.rs  logs_ext.rs  meta.rs  mod.rs  modes.rs  operations.rs  outputs.rs  reset.rs  software.rs  streams.rs  stubs.rs  sub_entity.rs  subscriptions.rs  updates.rs
crates/sovd-api/tests/: authorizer_seam.rs  data_categories.rs  data_read_nonecu.rs  data_write_nrc.rs  definitions_e2e.rs  modes_comm_dtc.rs  spec_update_flow.rs
crates/sovd-cli/: Cargo.toml  Dockerfile
crates/sovd-cli/src/: config.rs  main.rs  output.rs
crates/sovd-cli/src/commands/: actuate.rs  bulk_data.rs  faults.rs  flash.rs  info.rs  list.rs  logs.rs  mod.rs  monitor.rs  operations.rs  outputs.rs  read.rs  reset.rs  session.rs  unlock.rs  write.rs
crates/sovd-client/: Cargo.toml
crates/sovd-client/examples/: flash-config-container.yaml  flash-config-opensovd.yaml
crates/sovd-client/src/: client.rs  error.rs  lib.rs  testing.rs  types.rs
crates/sovd-client/src/flash/: client.rs  config.rs  mod.rs  types.rs
crates/sovd-client/src/streaming/: mod.rs  parser.rs  subscription.rs  types.rs
crates/sovd-client/tests/: integration_tests.rs
crates/sovd-conv/: Cargo.toml  README.md
crates/sovd-conv/src/: decode.rs  definition.rs  encode.rs  error.rs  lib.rs  precision.rs  store.rs  types.rs
crates/sovd-core/: Cargo.toml
crates/sovd-core/src/: backend.rs  error.rs  lib.rs  routing.rs
crates/sovd-core/src/models/: bulk_data.rs  data.rs  entity.rs  error.rs  fault.rs  log.rs  mod.rs  mode.rs  operation.rs  output.rs
crates/sovd-gateway/: Cargo.toml
crates/sovd-gateway/src/: gateway.rs  lib.rs
crates/sovd-mdns/: Cargo.toml
crates/sovd-mdns/examples/: advertise.rs
crates/sovd-mdns/src/: advertiser_nto.rs  advertiser_real.rs  lib.rs  responder.rs
crates/sovd-mdns/tests/fixtures/: leaf-cvc-host-rig1.der
crates/sovd-proxy/: Cargo.toml
crates/sovd-proxy/src/: lib.rs  proxy.rs
crates/sovd-tests/: Cargo.toml
crates/sovd-tests/src/: lib.rs
crates/sovd-tests/tests/: api_integration_test.rs  e2e_test.rs  gateway_e2e_test.rs  multilayer_e2e_test.rs
crates/sovd-uds/: Cargo.toml
crates/sovd-uds/src/: backend.rs  config.rs  error.rs  lib.rs  output_conv.rs  unlock.rs
crates/sovd-uds/src/session/: manager.rs  mod.rs
crates/sovd-uds/src/subscription/: manager.rs  mod.rs
crates/sovd-uds/src/transport/: adapter.rs  error.rs  mock.rs  mod.rs
crates/sovd-uds/src/transport/doip/: adapter.rs  discovery.rs  mod.rs
crates/sovd-uds/src/transport/socketcan/: adapter.rs  mod.rs  scanner.rs
crates/sovd-uds/src/uds/: dtc.rs  error.rs  mod.rs  nrc.rs  services.rs
crates/sovdd/: Cargo.toml
crates/sovdd/src/: main.rs
scripts/: setup-vcan.sh
simulations/: README.md
simulations/basic_uds/: start.sh  stop.sh  view-logs.sh
simulations/basic_uds/config/: dids-body.yaml  dids-engine.yaml  dids-transmission.yaml  ecu-body.toml  ecu-engine.toml  ecu-transmission.toml  gateway.toml  secrets.toml
simulations/lib/: common.sh
simulations/supplier_ota/: gen-firmware.sh  start.sh  stop.sh
simulations/supplier_ota/config/: dids-body.yaml  dids-engine.yaml  dids-transmission.yaml  dids-vtx-vx500.yaml  ecu-body.toml  ecu-engine.toml  ecu-supplier-engine.toml  ecu-transmission.toml  example-app.toml  secrets.toml  uds-gateway.toml  vehicle-gateway.toml
tests/fixtures/: vtx_ecm_definitions.yaml
