[package]
name = "example-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example app entity - SOVD app with auth, OTA interception, and synthetic telemetry"

[dependencies]
sovd-api.workspace = true
sovd-proxy.workspace = true
sovd-core.workspace = true
sovd-client.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
sovd-uds.workspace = true
example-ecu.workspace = true
hex.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio-test.workspace = true

[[bin]]
name = "example-app"
path = "src/main.rs"
