[package]
name = "sovd-cli"
version.workspace = true
edition.workspace = true
description = "Command-line tool for SOVD vehicle diagnostics"

[[bin]]
name = "sovd-cli"
path = "src/main.rs"

[dependencies]
# Client library
sovd-client = { path = "../sovd-client" }

# CLI parsing
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Output formatting
tabled = "0.15"
colored = "2.1"
indicatif = "0.17"

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
dirs = "5"
toml = { workspace = true }
ctrlc = "3.4"
