[package]
name = "sovd-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOVD REST API client for communicating with SOVD servers"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Core types
sovd-core = { workspace = true }

# DID conversions (optional, for client-side conversion of private data)
sovd-conv = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
url = { workspace = true }
percent-encoding = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Server for the `testing` module (only compiled with the `test-util` feature)
axum = { workspace = true, optional = true }

[features]
default = []
# Enable client-side DID conversion (re-exports sovd-conv)
conversion = ["sovd-conv"]
# Test utilities (`testing::TestServer`) — pulls in axum to host the router
# under test. Enable from consumers' [dev-dependencies] only.
test-util = ["dep:axum"]

[dev-dependencies]
tokio-test = { workspace = true }
sovd-api = { workspace = true }
sovd-conv = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
# Self dev-dependency: turns on `test-util` for this crate's own tests
# (tests/integration_tests.rs) without leaking it to downstream builds.
sovd-client = { path = ".", features = ["test-util"] }
