[package]
name = "sovd-conv"
version = "0.1.0"
edition = "2021"
description = "DID conversion library for automotive diagnostics"
license = "MIT"

[dependencies]
# sovd-core (foundation) for the shared §7.9 DataCategory type. sovd-core has
# no dependency on sovd-conv, so this edge is acyclic.
sovd-core = { path = "../sovd-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
