[package]
name = "sovd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for SOVD servers"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
