[package]
name = "sovd-gateway"
version = "0.1.0"
edition = "2021"
description = "SOVD Gateway - Federated backend aggregation"

[dependencies]
sovd-core = { path = "../sovd-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
tracing = "0.1"
