[package]
name = "sovdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOVD server daemon - REST API gateway for vehicle diagnostics"

[dependencies]
sovd-core.workspace = true
sovd-api.workspace = true
sovd-uds.workspace = true
sovd-gateway.workspace = true
sovd-conv.workspace = true
sovd-proxy.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
toml.workspace = true

[[bin]]
name = "sovdd"
path = "src/main.rs"
