[package]
name = "sovdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOVD server daemon - REST API gateway for vehicle diagnostics"

[dependencies]
sovd-core.workspace = true
sovd-api.workspace = true
sovd-uds.workspace = true
sovd-gateway.workspace = true
sovd-conv.workspace = true
sovd-proxy.workspace = true
sovd-mdns.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
toml.workspace = true

# In-process TLS (rustls + ring provider — portable, no cmake/NASM)
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Read the TLS leaf DER back out of the configured PEM to derive the conformant
# mDNS instance id (same rustls-pemfile 2.x axum-server already pulls in).
rustls-pemfile = "2"

[[bin]]
name = "sovdd"
path = "src/main.rs"
